test(third-party-service): added tests for third party service impl

--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -1,3 +1,10 @@
 cache.expire.seconds=1800
+
 ratelimit.refill.tokens=3
 ratelimit.refill.time.seconds=60
+
+third.party.http.client.url=http://localhost:8081
+third.party.http.client.timeout.millis.connection=2000
+third.party.http.client.timeout.millis.read=2000
+third.party.http.client.timeout.millis.write=2000
+third.party.http.client.timeout.millis.response=2000
