--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -8,3 +8,6 @@ third.party.http.client.timeout.millis.connection=2000
 third.party.http.client.timeout.millis.read=2000
 third.party.http.client.timeout.millis.write=2000
 third.party.http.client.timeout.millis.response=2000
+third.party.http.client.retry.backoff.millis.interval=200
+third.party.http.client.retry.backoff.multiplier=2
+third.party.http.client.retry.backoff.max.attempts=3
