--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -11,3 +11,7 @@ third.party.http.client.timeout.millis.response=2000
 third.party.http.client.retry.backoff.millis.interval=200
 third.party.http.client.retry.backoff.multiplier=2
 third.party.http.client.retry.backoff.max.attempts=3
+
+spring.datasource.url=jdbc:postgresql://localhost:8087/history
+spring.datasource.username=postgres
+spring.datasource.password=postgres
