Feat/post history (#11)
* feat(apicalls): save api calls in repository

* feat(apicalls): make the save in repository async

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
 			<version>5.9.2</version>
 			<scope>test</scope>
 		</dependency>
+		<!--Mock webserver to test controller-->
 		<dependency>
 			<groupId>com.squareup.okhttp3</groupId>
 			<artifactId>mockwebserver</artifactId>
@@ -56,6 +57,23 @@
 			<groupId>io.github.resilience4j</groupId>
 			<artifactId>resilience4j-retry</artifactId>
 			<version>2.0.2</version>
+		</dependency>
+		<!--Database ORM-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jdbc</artifactId>
+		</dependency>
+		<!--Database driver-->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.5.4</version>
+		</dependency>
+		<!--JSON manipulation-->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.14.2</version>
 		</dependency>
 	</dependencies>
 	<build>
