--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -12,6 +12,6 @@ third.party.http.client.retry.backoff.millis.interval=200
 third.party.http.client.retry.backoff.multiplier=2
 third.party.http.client.retry.backoff.max.attempts=3
 
-spring.datasource.url=jdbc:postgresql://localhost:8087/history
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/history
 spring.datasource.username=postgres
 spring.datasource.password=postgres
