--- a/scripts/docker-compose.yml
+++ b/scripts/docker-compose.yml
@@ -2,7 +2,7 @@
 version: '3.8'
 services:
   db:
-    image: postgres:15.2
+    image: postgres:15.2-alpine
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
@@ -11,19 +11,25 @@ services:
       - '5432:5432'
     volumes:
       - db:/var/lib/postgresql/data
-      - ./create_tables.sql:/docker-entrypoint-initdb.d/create_tables.sql
+      - ./database/create_tables.sql:/docker-entrypoint-initdb.d/create_tables.sql
   api:
-    image: api-rest-challenge:latest
+    image: piacentini08/api-rest-challenge:latest
     depends_on:
       - db
+      - external-service
     environment:
       - spring.datasource.url=jdbc:postgresql://db:5432/history
-      - spring.datasource.username=postgres
-      - spring.datasource.password=postgres
+      - third.party.http.client.url=http://external-service:8081
     ports:
       - '8080:8080'
     links:
       - db
+      - external-service
+  external-service:
+    image: piacentini08/external-service:latest
+    ports:
+      - '8081:8081'
+
 
 volumes:
   db:
