--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -3,7 +3,7 @@ cache.expire.seconds=1800
 ratelimit.refill.tokens=3
 ratelimit.refill.time.seconds=60
 
-third.party.http.client.url=http://localhost:8081
+third.party.http.client.url=http://127.0.0.1:8081
 third.party.http.client.timeout.millis.connection=2000
 third.party.http.client.timeout.millis.read=2000
 third.party.http.client.timeout.millis.write=2000
@@ -12,6 +12,6 @@ third.party.http.client.retry.backoff.millis.interval=200
 third.party.http.client.retry.backoff.multiplier=2
 third.party.http.client.retry.backoff.max.attempts=3
 
-spring.datasource.url=jdbc:postgresql://localhost:8087/history
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/history
 spring.datasource.username=postgres
 spring.datasource.password=postgres
